--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.SchoolTimeTable" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
+        <item name="android:editTextColor">@color/black</item>
         <item name="colorPrimary">@color/textDarkGray</item>
         <item name="colorPrimaryVariant">@color/purple_200</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -20,6 +21,7 @@
     </style>
 
     <style name="timePickerWhite">
+        <item name="android:editTextColor">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item> <!-- color for digits -->
         <item name="android:textColor">@color/white</item> <!-- color for colon -->
         <item name="android:colorControlNormal">@color/white</item> <!-- color for (horizontal) delimiters -->
