--- a/app/src/main/res/values-v26/themes.xml
+++ b/app/src/main/res/values-v26/themes.xml
@@ -2,6 +2,7 @@
 <resources>
     <style name="Theme.SchoolTimeTable" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
+        <item name="android:textColor">@color/textDarkGray</item>
         <item name="colorPrimary">@color/textDarkGray</item>
         <item name="colorPrimaryVariant">@color/purple_200</item>
         <item name="colorOnPrimary">@color/white</item>
