--- a/app/src/main/res/layout/activity_on_subject_click.xml
+++ b/app/src/main/res/layout/activity_on_subject_click.xml
@@ -194,7 +194,7 @@
                     android:layout_height="match_parent"
                     android:paddingBottom="10dp"
                     android:layout_marginStart="18dp"
-                    android:background="@color/white"/>
+                    android:background="@color/BackgroundPicker"/>
 
                 <TimePicker
                     android:id="@+id/simpleTimePicker"
