--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="cardBackground">#FF5900</color>
     <color name="teal_700">#018786</color>
     <color name="lightGray">#838383</color>
+    <color name="BackgroundPicker">#FFFFFF</color>
 </resources>
